--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
+    "formidable": "^2.0.1",
     "next": "^12.3.1",
+    "next-connect": "^0.13.0",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-aria": "^3.19.0",
