--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "incremental": true
   },
   "include": [
